tranlations: fix tranlations, typo's, untranslated text,, replace polygon by shape

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -39,21 +39,21 @@
     "cylindrical": "cilíndrico",
     "definitearticleline": "la línea",
     "definitearticlepoint": "el punto",
-    "definitearticlepolygon": "el polígono",
+    "definitearticlepolygon": "la forma",
     "Delete selection": "Eliminar selección",
     "Determining position": "Determinando posición",
     "Distance": "Distancia",
     "Done": "Hecho",
     "Draw": "Dibujar",
     "Draw map layer": "Dibujar capa de mapa",
-    "draw-help-edit-element": "haga clic en el punto para mover\nhaga clic en el pequeño punto entre 2 puntos para agregar un punto\nhaga clic en un {{otherelement}} para seleccionar {{referelement}}\nhaga clic en 'punto', 'línea' o 'polígono' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
-    "draw-help-edit-point": "haga clic en la papelera para eliminar punto\nmueva el punto seleccionado a una nueva ubicación\nhaga clic en el pequeño punto entre 2 puntos para agregar un punto\nhaga clic en 'punto', 'línea' o 'polígono' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
+    "draw-help-edit-element": "haga clic en el punto para mover\nhaga clic en el pequeño punto entre 2 puntos para agregar un punto\nhaga clic en un {{otherelement}} para seleccionar {{referelement}}\nhaga clic en 'punto', 'línea' o 'forma' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
+    "draw-help-edit-point": "haga clic en la papelera para eliminar punto\nmueva el punto seleccionado a una nueva ubicación\nhaga clic en el pequeño punto entre 2 puntos para agregar un punto\nhaga clic en 'punto', 'línea' o 'forma' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
     "draw-help-line": "haga clic en el mapa para agregar una línea\nhaga clic nuevamente en el punto final o [ENTER] para completar la línea\nmantenga presionado [ALT] para desactivar la función de ajuste\nhaga clic en 'seleccionar' para editar una línea existente\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
     "draw-help-point": "haga clic en el mapa para agregar un punto\nmantenga presionado [ALT] para desactivar la función de ajuste\nhaga clic en 'seleccionar' para editar un punto existente\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
-    "draw-help-polygon": "haga clic en el mapa para agregar un polígono\nmantenga presionado [ALT] para desactivar la función de ajuste\nhaga clic nuevamente en el último punto agregado o [ENTER] para completar el polígono\nhaga clic en 'seleccionar' para editar un polígono existente\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
-    "draw-help-select-element": "haga clic en {{indefinitearticleelement}} para seleccionar\nhaga clic en 'punto', 'línea' o 'polígono' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
-    "draw-help-selected-non-point": "haga clic en la papelera para eliminar\nhaga clic nuevamente en {{definitearticleelement}} para editar polígono\nhaga clic en un {{otherelement}} para seleccionar {{referelement}}\nhaga clic en 'punto', 'línea' o 'polígono' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
-    "draw-help-selected-point": "haga clic en la papelera para eliminar\nmueva el punto seleccionado a una nueva ubicación\nhaga clic en otro punto para seleccionarlo\nhaga clic en 'punto', 'línea' o 'polígono' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
+    "draw-help-polygon": "haga clic en el mapa para agregar una forma\nmantenga presionado [ALT] para desactivar la función de ajuste\nhaga clic nuevamente en el último punto agregado o [ENTER] para completar la forma\nhaga clic en 'seleccionar' para editar una forma existente\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
+    "draw-help-select-element": "haga clic en {{indefinitearticleelement}} para seleccionar\nhaga clic en 'punto', 'línea' o 'forma' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
+    "draw-help-selected-non-point": "haga clic en la papelera para eliminar\nhaga clic nuevamente en {{definitearticleelement}} para editar forma\nhaga clic en un {{otherelement}} para seleccionar {{referelement}}\nhaga clic en 'punto', 'línea' o 'forma' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
+    "draw-help-selected-point": "haga clic en la papelera para eliminar\nmueva el punto seleccionado a una nueva ubicación\nhaga clic en otro punto para seleccionarlo\nhaga clic en 'punto', 'línea' o 'forma' para dibujar un nuevo elemento\nhaga clic en ⋮ para una nueva capa de mapa o propiedades de capa",
     "E": "E",
     "edit map layer": "editar capa de mapa",
     "Enter a name": "Ingrese un nombre",
@@ -84,20 +84,20 @@
     "In drawing mode": "En modo de dibujo",
     "indefinitearticleline": "una línea",
     "indefinitearticlepoint": "un punto",
-    "indefinitearticlepolygon": "una polígono",
+    "indefinitearticlepolygon": "una forma",
     "Intersect": "Intersectar",
     "Latitude": "Latitud",
     "latitude": "latitud",
-    "layertypeLine": "capa de línea",
-    "layertypePoint": "capa de punto",
-    "layertypePolygon": "capa de polígono",
+    "layertypeLine": "capa de líneas",
+    "layertypePoint": "capa de puntos",
+    "layertypePolygon": "capa de formas",
     "Legend": "Leyenda",
     "Legend and map layers": "Leyenda y capas de mapa",
     "legend unavailable": "leyenda no disponible",
     "legend unavailable for type": "leyenda no disponible para el tipo",
     "length": "longitud",
     "Line": "Línea",
-    "Line layer": "Capa de línea",
+    "Line layer": "Capa de líneas",
     "link how does EduGIS work?": "https://edugis.nl/hoe-werkt-edugis-atlas",
     "Load Table": "Cargar Tabla",
     "Location": "Mi Ubicación",
@@ -141,14 +141,14 @@
     "orthographic": "ortográfico",
     "otherline": "otra línea",
     "otherpoint": "otro punto",
-    "otherpolygon": "otro polígono",
+    "otherpolygon": "otra forma",
     "Output map layer": "Capa de mapa de salida",
     "perimeter": "perímetro",
     "Perimeter": "Perímetro",
     "Point": "Punto",
-    "Point layer": "Capa de punto",
-    "Polygon": "Polígono",
-    "Polygon layer": "Capa de polígono",
+    "Point layer": "Capa de puntos",
+    "Polygon": "Forma",
+    "Polygon layer": "Capa de formas",
     "Precision": "Precisión",
     "Previous": "Anterior",
     "Properties": "Propiedades",
@@ -178,14 +178,14 @@
     "Select a tool button": "Seleccionar un botón de herramienta",
     "Select language for map display": "Seleccionar idioma para la visualización del mapa",
     "Select map layer": "Seleccionar capa de mapa",
-    "Select point, line, or shape layer": "Seleccionar capa de punto, línea o polígono",
+    "Select point, line, or shape layer": "Seleccionar capa de punto, línea o forma",
     "Select projection": "Seleccionar proyección",
     "Select to add to the map": "Seleccione para añadir al mapa",
     "Selected Map Layers": "Capas de Mapa Seleccionadas",
     "Selected map layers only": "Solo capas de mapa seleccionadas",
     "SelectedLine": "Línea seleccionada",
     "SelectedPoint": "Punto seleccionado",
-    "SelectedPolygon": "Politiek seleccionado",
+    "SelectedPolygon": "Forma seleccionada",
     "Show terrain in 3D": "Mostrar terreno en 3D",
     "size": "tamaño",
     "Skip": "Omitir",
@@ -193,7 +193,7 @@
     "string": "cadena",
     "text color": "color del texto",
     "The search function prioritizes locations that are within the map view.": "La función de búsqueda prioriza las ubicaciones que se encuentran dentro de la vista del mapa. Si no se encuentra (casi) nada allí, la búsqueda se amplía a otras áreas.",
-    "Toggle attribution": "Afficher/Masquer les crédits",
+    "Toggle attribution": "Mostrar/ocultar atribución",
     "toggle layer visibility": "alternar visibilidad de capa",
     "Toolbox": "Caja de herramientas",
     "Tools": "Herramientas",
