--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -13,7 +13,7 @@
     "Border color": "Couleur de la bordure",
     "border width": "largeur de la bordure",
     "Buffer": "Tampon",
-    "Buffer distance in meters": "Buffer distance in meters",
+    "Buffer distance in meters": "Distance du tampon en mètres",
     "Calculate": "Calculer",
     "Calculate a 'buffer' around the visible elements in map layer 1": "Calculer un 'tampon' autour des éléments visibles dans la couche de carte 1",
     "Calculate Buffer": "Calculer un tampon",
@@ -139,11 +139,11 @@
     "OK": "OK",
     "Open": "Ouvrir",
     "open file": "ouvrir le fichier",
-    "ortographic": "orthographique",
+    "orthographic": "orthographique",
     "otherline": "autre ligne",
     "otherpoint": "autre point",
     "otherpolygon": "autre forme",
-    "Output map layer": "Output map layer",
+    "Output map layer": "Couche de carte de sortie",
     "perimeter": "périmètre",
     "Perimeter": "Périmètre",
     "Point": "Point",
@@ -177,7 +177,7 @@
     "Select a layer": "Sélectionner une couche",
     "Select a tool button": "Choisissez un outil via les boutons",
     "Select language for map display": "Sélectionnez la langue pour l'affichage de la carte",
-    "Select map layer": "Select map layer",
+    "Select map layer": "Sélectionner une couche de carte",
     "Select point, line, or shape layer": "Sélectionnez une couche de point, de ligne ou de forme",
     "Select projection": "Sélectionner la projection",
     "Select to add to the map": "Sélectionnez pour ajouter à la carte",
@@ -185,7 +185,7 @@
     "Selected map layers only": "Seulement les couches de carte sélectionnées",
     "SelectedLine": "Ligne sélectionnée",
     "SelectedPoint": "Point sélectionné",
-    "SelectedPolygon": "Forme sélectionné",
+    "SelectedPolygon": "Forme sélectionnée",
     "Show terrain in 3D": "Afficher le terrain en 3D",
     "size": "taille",
     "Skip": "Passer",
