--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -76,7 +76,7 @@
     "Hopscotch scale and attribution explain": "Hier kun je:<ul><li>de <b>schaal</b> van de kaart aflezen.</li>    <li>de <b>bronvermelding</b> aflezen.</li></ul>",
     "Hopscotch scale and attribution title": "Schaal en bronvermelding",
     "Hopscotch tools explain": "Met deze knoppen doe je bewerkingen op de kaart.<p>Houd de muis stil boven de knoppen voor meer uitleg over elke knop",
-    "Hopscotch zoom explain": "Hier kun je:<ul><li>met knoppen <b>in- en uitzoomen</b>.</li><li>de <b>noordgerichtheid</b> aanpassen en herstellen.</li><li>een <b>zomniveau</b> invoeren.</li></ul>",
+    "Hopscotch zoom explain": "Hier kun je:<ul><li>met knoppen <b>in- en uitzoomen</b>.</li><li>de <b>noordgerichtheid</b> aanpassen en herstellen.</li><li>een <b>zoomniveau</b> invoeren.</li></ul>",
     "Hopscotch zoom title": "Zoomen en draaien",
     "How does EduGIS work?": "Hoe werkt EduGIS?",
     "How does {{appname}} work?": "Hoe werkt {{appname}}?",
