Renamed datatool 'distance' to 'shortest distance'; added translation for tool header

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,6 +18,7 @@
     "Calculate a 'buffer' around the visible elements in map layer 1": "Calculate a 'buffer' around the visible elements in map layer 1",
     "Calculate Buffer": "Calculate Buffer",
     "Calculate distances": "Calculate distances",
+    "Calculate shortest distance": "Calculate shortest distance",
     "Calculating buffers, please wait": "Calculating buffers, please wait",
     "Cancel": "Cancel",
     "Center Latitude": "Center Latitude",
