--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -18,6 +18,7 @@
     "Calculate a 'buffer' around the visible elements in map layer 1": "Calcular un 'buffer' alrededor de los elementos visibles en la capa de mapa 1",
     "Calculate Buffer": "Calcular Buffer",
     "Calculate distances": "Calcular distancias",
+    "Calculate shortest distance": "Calcular la distancia más corta",
     "Calculating buffers, please wait": "Calculando buffers, por favor espere",
     "Cancel": "Cancelar",
     "Center Latitude": "Latitud del centro",
