--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -18,6 +18,7 @@
     "Calculate a 'buffer' around the visible elements in map layer 1": "Calculer un 'tampon' autour des éléments visibles dans la couche de carte 1",
     "Calculate Buffer": "Calculer un tampon",
     "Calculate distances": "Calculer les distances",
+    "Calculate shortest distance": "Calculer la distance la plus courte",
     "Calculating buffers, please wait": "Calcul des tampons, veuillez patienter",
     "Cancel": "Annuler",
     "Center Latitude": "Latitude centrale",
