--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -16,6 +16,7 @@
     "Buffer distance in meters": "Distance du tampon en mètres",
     "Calculate": "Calculer",
     "Calculate a 'buffer' around the visible elements in map layer 1": "Calculer un 'tampon' autour des éléments visibles dans la couche de carte 1",
+    "Calculate the shortest distance from all elements in layer 1 to the nearest element in layer 2.": "Calculer la distance la plus courte entre tous les éléments de la couche 1 et l'élément le plus proche de la couche 2.",
     "Calculate Buffer": "Calculer un tampon",
     "Calculate distances": "Calculer les distances",
     "Calculate shortest distance": "Calculer la distance la plus courte",
@@ -90,6 +91,7 @@
     "Lambert Conformal Conic": "Conique conforme de Lambert",
     "Latitude": "Latitude",
     "latitude": "latitude",
+    "Layer": "Couche",
     "layertypeLine": "couche de lignes",
     "layertypePoint": "couche de points",
     "layertypePolygon": "couche de formes",
@@ -113,7 +115,8 @@
     "Map Layer 1": "Couche de carte 1",
     "Map layer outside current view": "Couche de carte en dehors de la vue",
     "Map layers": "Couches de carte",
-    "Map layers available (at least 1 required)": "Couches de carte disponibles (au moins 1 requise)",
+    "map layers available (at least 1 required)": "couches de carte disponibles (au moins 1 requise)",
+    "map layers available (at least 2 required)": "couches de carte disponibles (au moins 2 requise)",
     "Map projection": "Projection de la carte",
     "Map Projections": "Projections Cartographiques",
     "map projections not supported by this viewer": "projections cartographiques non prises en charge par cette visionneuse",
@@ -188,6 +191,7 @@
     "SelectedPoint": "Point sélectionné",
     "SelectedPolygon": "Forme sélectionnée",
     "Show terrain in 3D": "Afficher le terrain en 3D",
+    "Shortest distance": "Distance la plus courte",
     "size": "taille",
     "Skip": "Passer",
     "Southern Parallel Lat": "Latitude parallèle sud",
