add attribute type "url" to draw objects, add translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -88,6 +88,7 @@
     "indefinitearticlepoint": "a point",
     "indefinitearticlepolygon": "a shape",
     "Intersect": "Intersect",
+    "invalid URL": "invalid URL",
     "Latitude": "Latitude",
     "latitude": "latitude",
     "Layer": "Layer",
@@ -171,6 +172,7 @@
     "Save layer": "Save",
     "Save layer set": "Save layer set",
     "Save map": "Save or open map",
+    "saved": "saved",
     "Scale": "Scale",
     "search": "search",
     "Search name, place or address": "Search name, place or address",
@@ -209,6 +211,7 @@
     "undo": "undo",
     "Upload Table": "Upload Table",
     "Upload table": "Upload table",
+    "url": "link (website or image)",
     "Visible tools": "Visible tools",
     "W": "W",
     "width": "width",
