--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -87,6 +87,7 @@
     "indefinitearticleline": "una línea",
     "indefinitearticlepoint": "un punto",
     "indefinitearticlepolygon": "una forma",
+    "invalid URL": "URL no válida",
     "Intersect": "Intersectar",
     "Latitude": "Latitud",
     "latitude": "latitud",
@@ -171,6 +172,7 @@
     "Save layer": "Guardar capa",
     "Save layer set": "Guardar conjunto de capas",
     "Save map": "Guardar o abrir mapa",
+    "saved": "guardado",
     "Scale": "Escala",
     "search": "buscar",
     "Search name, place or address": "Buscar nombre, lugar o dirección",
@@ -209,6 +211,7 @@
     "undo": "deshacer",
     "Upload Table": "Subir tabla",
     "Upload table": "Subir tabla",
+    "url": "enlace (sitio web o imagen)",
     "Visible tools": "Herramientas visibles",
     "W": "O",
     "width": "ancho",
