--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -88,6 +88,7 @@
     "indefinitearticlepoint": "un point",
     "indefinitearticlepolygon": "une forme",
     "Intersect": "Intersection",
+    "invalid URL": "URL invalide",
     "Lambert Conformal Conic": "Conique conforme de Lambert",
     "Latitude": "Latitude",
     "latitude": "latitude",
@@ -171,6 +172,7 @@
     "Save layer": "Enregistrer la couche",
     "Save layer set": "Enregistrer l'ensemble des couches",
     "Save map": "Enregistrer / Ouvrir la carte",
+    "saved": "enregistré",
     "Scale": "Échelle",
     "search": "recherche",
     "Search name, place or address": "Recherche par nom, lieu ou adresse",
@@ -208,6 +210,7 @@
     "type": "type",
     "undo": "annuler",
     "Upload Table": "Télécharger le tableau",
+    "url": "lien (site web ou image)",
     "Visible tools": "Outils visibles",
     "W": "O",
     "waiting for response": "récupération des données",
