--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -87,6 +87,7 @@
     "indefinitearticlepoint": "een punt",
     "indefinitearticlepolygon": "een vlak",
     "Intersect": "Snijden",
+    "invalid URL": "ongeldige URL",
     "Lambert Conformal Conic": "Hoekgetrouwe kegelprojectie (Lambert)",
     "Latitude": "Breedtegraad",
     "latitude": "breedtegraad",
@@ -171,6 +172,7 @@
     "Save layer": "Laag bewaren",
     "Save layer set": "Lagen-set bewaren",
     "Save map": "Kaart opslaan / openen",
+    "saved": "opgeslagen",
     "Scale": "Schaalbalk",
     "search": "zoeken",
     "Search name, place or address": "Naam, plaats of adres zoeken",
@@ -208,6 +210,7 @@
     "type": "soort",
     "undo": "undo",
     "Upload Table": "Tabel uploaden",
+    "url": "link (website of afbeelding)",
     "Visible tools": "Zichtbare tools",
     "W": "W",
     "waiting for response": "gegevens ophalen",
