replace button by cloud service icon, add translations

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -100,6 +100,8 @@
     "legend unavailable": "leyenda no disponible",
     "legend unavailable for type": "leyenda no disponible para el tipo",
     "length": "longitud",
+    "lfs: layer from service": "desde servicio",
+    "ltr: open file": "desde archivo",
     "Line": "Línea",
     "Line layer": "Capa de líneas",
     "link how does EduGIS work?": "https://edugis.nl/hoe-werkt-edugis-atlas",
