--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -100,6 +100,8 @@
     "legend unavailable": "legenda niet beschikbaar",
     "legend unavailable for type": "legenda niet beschikbaar voor type",
     "length": "lengte",
+    "lfs: layer from service": "via service",
+    "ltr: open file": "vanuit bestand",
     "Line": "Lijn",
     "Line layer": "Lijnenlaag",
     "link how does EduGIS work?": "https://edugis.nl/hoe-werkt-edugis-atlas",
