--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -100,6 +100,8 @@
     "legend unavailable": "legend unavailable",
     "legend unavailable for type": "legend unavailable for type",
     "length": "length",
+    "lfs: layer from service": "from service",
+    "ltr: open file": "from file",
     "Line": "Line",
     "Line layer": "Line layer",
     "link how does EduGIS work?": "https://edugis.nl/hoe-werkt-edugis-atlas",
