add more translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -100,7 +100,11 @@
     "legend unavailable": "legend unavailable",
     "legend unavailable for type": "legend unavailable for type",
     "length": "length",
+    "lfs: Add External Layer": "Add External Layer",
+    "lfs: Enter a valid service URL": "Enter a valid service URL",
     "lfs: layer from service": "from service",
+    "lfs: Please enter a valid service URL.": "Please enter a valid service URL.",
+    "lfs: Service URL": "Service URL",
     "ltr: open file": "from file",
     "Line": "Line",
     "Line layer": "Line layer",
