--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -100,7 +100,11 @@
     "legend unavailable": "leyenda no disponible",
     "legend unavailable for type": "leyenda no disponible para el tipo",
     "length": "longitud",
+    "lfs: Add External Layer": "Agregar capa externa",
+    "lfs: Enter a valid service URL": "URL de servicio válida",
     "lfs: layer from service": "desde servicio",
+    "lfs: Please enter a valid service URL.": "Ingrese una URL de servicio válida.",
+    "lfs: Service URL": "URL del servicio",
     "ltr: open file": "desde archivo",
     "Line": "Línea",
     "Line layer": "Capa de líneas",
