--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -100,7 +100,11 @@
     "legend unavailable": "legenda niet beschikbaar",
     "legend unavailable for type": "legenda niet beschikbaar voor type",
     "length": "lengte",
+    "lfs: Add External Layer": "Externe laag toevoegen",
+    "lfs: Enter a valid service URL": "Geldige service-URL",
     "lfs: layer from service": "via service",
+    "lfs: Please enter a valid service URL.": "Voer een geldige service-URL in.",
+    "lfs: Service URL": "Service-URL",
     "ltr: open file": "vanuit bestand",
     "Line": "Lijn",
     "Line layer": "Lijnenlaag",
