--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -96,7 +96,11 @@
     "layertypeLine": "couche de lignes",
     "layertypePoint": "couche de points",
     "layertypePolygon": "couche de formes",
+    "lfs: Add External Layer": "Ajouter une couche externe",
+    "lfs: Enter a valid service URL": "URL de service valide",
     "lfs: layer from service": "via service",
+    "lfs: Please enter a valid service URL.": "Saississez une URL de service valide.",
+    "lfs: Service URL": "URL du service",
     "ltr: open file": "depuis fichier",
     "Legend": "Légende",
     "Legend and map layers": "Légende et couches de la carte",
