some more translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -101,8 +101,11 @@
     "legend unavailable for type": "legend unavailable for type",
     "length": "length",
     "lfs: Add External Layer": "Add External Layer",
+    "lfs: Add to Map": "Add to Map",
     "lfs: Enter a valid service URL": "Enter a valid service URL",
     "lfs: layer from service": "from service",
+    "lfs: Load": "Load",
+    "lfs: Loading...": "Loading... ⟳",
     "lfs: Please enter a valid service URL.": "Please enter a valid service URL.",
     "lfs: Service URL": "Service URL",
     "ltr: open file": "from file",
