--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -101,8 +101,11 @@
     "legend unavailable for type": "leyenda no disponible para el tipo",
     "length": "longitud",
     "lfs: Add External Layer": "Agregar capa externa",
+    "lfs: Add to Map": "Agregar al mapa",
     "lfs: Enter a valid service URL": "URL de servicio válida",
     "lfs: layer from service": "desde servicio",
+    "lfs: Load": "Cargar",
+    "lfs: Loading...": "Cargando... ⟳",
     "lfs: Please enter a valid service URL.": "Ingrese una URL de servicio válida.",
     "lfs: Service URL": "URL del servicio",
     "ltr: open file": "desde archivo",
