--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -97,8 +97,11 @@
     "layertypePoint": "couche de points",
     "layertypePolygon": "couche de formes",
     "lfs: Add External Layer": "Ajouter une couche externe",
+    "lfs: Add to Map": "Ajouter à la carte",
     "lfs: Enter a valid service URL": "URL de service valide",
     "lfs: layer from service": "via service",
+    "lfs: Load": "Charger",
+    "lfs: Loading...": "Chargement... ⟳",
     "lfs: Please enter a valid service URL.": "Saississez une URL de service valide.",
     "lfs: Service URL": "URL du service",
     "ltr: open file": "depuis fichier",
