--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -101,8 +101,11 @@
     "legend unavailable for type": "legenda niet beschikbaar voor type",
     "length": "lengte",
     "lfs: Add External Layer": "Externe laag toevoegen",
+    "lfs: Add to Map": "Toevoegen aan kaart",
     "lfs: Enter a valid service URL": "Geldige service-URL",
     "lfs: layer from service": "via service",
+    "lfs: Load": "Laad",
+    "lfs: Loading...": "Laden... ⟳",
     "lfs: Please enter a valid service URL.": "Voer een geldige service-URL in.",
     "lfs: Service URL": "Service-URL",
     "ltr: open file": "vanuit bestand",
