add more translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -102,12 +102,16 @@
     "length": "length",
     "lfs: Add External Layer": "Add External Layer",
     "lfs: Add to Map": "Add to Map",
+    "lfs: Available layers": "Available Layers",
     "lfs: Enter a valid service URL": "Enter a valid service URL",
     "lfs: layer from service": "from service",
     "lfs: Load": "Load",
     "lfs: Loading...": "Loading... ⟳",
+    "lfs: No description": "No description",
+    "lfs: No description available": "No description available",
     "lfs: Please enter a valid service URL.": "Please enter a valid service URL.",
     "lfs: Service URL": "Service URL",
+    "lfs: Unnamed Layer": "Unnamed Layer",
     "ltr: open file": "from file",
     "Line": "Line",
     "Line layer": "Line layer",
