--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -102,12 +102,16 @@
     "length": "longitud",
     "lfs: Add External Layer": "Agregar capa externa",
     "lfs: Add to Map": "Agregar al mapa",
+    "lfs: Available layers": "Capas disponibles",
     "lfs: Enter a valid service URL": "URL de servicio válida",
     "lfs: layer from service": "desde servicio",
     "lfs: Load": "Cargar",
     "lfs: Loading...": "Cargando... ⟳",
+    "lfs: No description": "Sin descripción",
+    "lfs: No description available": "Sin descripción disponible",    
     "lfs: Please enter a valid service URL.": "Ingrese una URL de servicio válida.",
     "lfs: Service URL": "URL del servicio",
+    "lfs: Unnamed Layer": "Capa sin nombre",
     "ltr: open file": "desde archivo",
     "Line": "Línea",
     "Line layer": "Capa de líneas",
