--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -98,12 +98,16 @@
     "layertypePolygon": "couche de formes",
     "lfs: Add External Layer": "Ajouter une couche externe",
     "lfs: Add to Map": "Ajouter à la carte",
+    "lfs: Available layers": "Couches disponibles",
     "lfs: Enter a valid service URL": "URL de service valide",
     "lfs: layer from service": "via service",
     "lfs: Load": "Charger",
     "lfs: Loading...": "Chargement... ⟳",
+    "lfs: No description": "Aucune description",
+    "lfs: No description available": "Aucune description disponible",
     "lfs: Please enter a valid service URL.": "Saississez une URL de service valide.",
     "lfs: Service URL": "URL du service",
+    "lfs: Unnamed Layer": "Couche sans nom",
     "ltr: open file": "depuis fichier",
     "Legend": "Légende",
     "Legend and map layers": "Légende et couches de la carte",
