--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -102,12 +102,16 @@
     "length": "lengte",
     "lfs: Add External Layer": "Externe laag toevoegen",
     "lfs: Add to Map": "Toevoegen aan kaart",
+    "lfs: Available layers": "Beschikbare lagen",
     "lfs: Enter a valid service URL": "Geldige service-URL",
     "lfs: layer from service": "via service",
     "lfs: Load": "Laad",
     "lfs: Loading...": "Laden... ⟳",
+    "lfs: No description": "Geen beschrijving",
+    "lfs: No description available": "Geen beschrijving beschikbaar",
     "lfs: Please enter a valid service URL.": "Voer een geldige service-URL in.",
     "lfs: Service URL": "Service-URL",
+    "lfs: Unnamed Layer": "Naamloze laag",
     "ltr: open file": "vanuit bestand",
     "Line": "Lijn",
     "Line layer": "Lijnenlaag",
